--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -58,7 +58,7 @@ hannah-brinkmann:
   role: 2018 Summer Fellow
   bio:
   email: hvmbrinkmann@gmail.com
-  website: hannahbrinkmann.com
+  website: http://hannahbrinkmann.com
   twitter_account_name:
   github_account_name:
   image: hannah-brinkmann.jpg
@@ -86,7 +86,7 @@ franny-corry:
   role: 2018 Summer Fellow
   bio:
   email: corry@usc.edu
-  website: francescorry.net
+  website: http://francescorry.net
   twitter_account_name:
   github_account_name:
   image: franny-corry.jpg
@@ -166,7 +166,7 @@ shira-feldman:
   role: 2018 Summer Fellow
   bio: >
   email: email.shira.feldman@gmail.com
-  website: www.shira-feldman.net
+  website: http://www.shira-feldman.net
   twitter_account_name: shirarbira
   github_account_name: shirarbira
   image: shira-feldman.jpg
