Add image filename

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -277,7 +277,7 @@ clare-stanton:
   website: 
   twitter_account_name: clare__stanton
   github_account_name: 
-  image: 
+  image: clare-stanton.jpg
   affiliated: true
 
 ben-steinberg:
