fix - spelling error

--- a/app/_data/news.yaml
+++ b/app/_data/news.yaml
@@ -19,14 +19,14 @@
 - project: caselaw-access-project
   type: press
   title: Open Data and the Free Access to Law Movement in the United States
-  publiction: SCRIPTed
+  publication: SCRIPTed
   date: March 26, 2016
   url: https://script-ed.org/blog/open-data-and-the-free-access-to-law-movement-in-the-united-states/
 
 - project: caselaw-access-project
   type: press
   title: Harvard Launches "Free the Law" Digitization Project
-  publiction: Library Journal
+  publication: Library Journal
   date: December 21, 2015
   url: http://lj.libraryjournal.com/2015/12/oa/harvard-launches-free-the-law-digitization-project/#_
 
