--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -40,6 +40,21 @@ samantha-bates:
   image: samantha-bates.jpg
   affiliated: true
 
+john-bowers:
+  name: John Bowers
+  sort_name: Bowers
+  role: Research Associate
+  bio: >
+    John works as a research associate for Professor Zittrain. He likes 
+    cooking, statistics, and historical nonfiction, and once legally named 
+    his pet cat "Bitcoin" after losing a bet.
+  email: jobowers@law.harvard.edu
+  website:
+  twitter_account_name:
+  github_account_name: john-bowers
+  image:
+  affiliated: true
+
 carrie-bly:
   name: Carrie Bly
   sort_name: Bly
