added John's pic, and updated paul's

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -52,7 +52,7 @@ john-bowers:
   website:
   twitter_account_name:
   github_account_name: john-bowers
-  image:
+  image: john-bowers.jpg
   affiliated: true
 
 carrie-bly:
