--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -110,7 +110,7 @@ franny-corry:
 jack-cushman:
   name: Jack Cushman
   sort_name: Cushman
-  role: Ombudsman
+  role: Senior Developer
   bio: >
     Jack is an attorney, developer, and tinkerer. He once built a
     working web server using only a Perl script, a paperclip, and a
@@ -362,7 +362,7 @@ jessamyn-west:
 adam-ziegler:
   name: Adam Ziegler
   sort_name: Ziegler
-  role: Managing Director
+  role: Director
   bio: >
     Adam is a lawyer and freethrow champion. He once made an opposing
     lawyer cry during trial...in a good way. His favorite book is Clovis
