--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -192,7 +192,7 @@ kelly-fitzpatrick:
   sort_name: Fitzpatrick
   role: Research Associate
   bio: >
-    Kelly is a Research Associate at the Berkman Klein Center working on the Caselaw Access Project. Before coming to LIL, Kelly built university websites and and digitized 400 year old books.
+    Kelly is a Research Associate at the Berkman Klein Center working on the Caselaw Access Project. Before coming to LIL, Kelly built university websites and digitized 400-year-old books.
   email: lfitzpatrick@cyber.harvard.edu
   website: http://lkfitz.tumblr.com/
   twitter_account_name: fitzbub
