add - Kendra Albert to contributors

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -910,3 +910,9 @@ jessica-yurkofsky:
   website: http://www.jessyurko.com/
   affiliated: false
 
+kendra-albert:
+  name: Kendra Albert
+  sort_name: Albert
+  website: https://kendraalbert.com/
+  affiliated: false
+  twitter_account_name: KendraSerra
