oops - sam^squared

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -938,6 +938,7 @@ keith-hartwig:
   sort_name: Hartwig
   website: http://keithhartwig.com
   affiliated: false
+  role: FK Productions
 
 sam-stites:
   name: Sam Stites
