--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -192,7 +192,7 @@ kelly-fitzpatrick:
   sort_name: Fitzpatrick
   role: Research Associate
   bio: >
-    Kelly is open access and digital collections specialist with an affinity for coffee, hedgehogs, and glam rock.
+    Kelly is an open access and digital collections specialist with an affinity for coffee, hedgehogs, and glam rock.
   email: lfitzpatrick@cyber.harvard.edu
   website: http://lkfitz.tumblr.com/
   twitter_account_name: fitzbub
