--- a/app/_data/news.yaml
+++ b/app/_data/news.yaml
@@ -18,7 +18,7 @@
 
 - project: caselaw-access-project
   type: press
-  title: LawNext Episode 18: Adam Ziegler On How Harvard Put 360 Years Of Caselaw Online
+  title: "LawNext Episode 18: Adam Ziegler On How Harvard Put 360 Years Of Caselaw Online"
   publication: LawSites
   date: November 12, 2018
   url: https://www.lawsitesblog.com/2018/11/lawnext-episode-18-adam-ziegler-harvard-put-360-years-caselaw-online.html
