add - alterspace news

--- a/app/_data/news.yaml
+++ b/app/_data/news.yaml
@@ -138,3 +138,11 @@
   publication: librarian.net
   date: March 11, 2013
   url: http://www.librarian.net/stax/4052/some-show-and-tell/
+
+### Alterspace ###
+- project: alterspace
+  type: press
+  title: Alterspace Transforms Libraries Into “Rooms of Requirement”
+  publication: LibraryJournal
+  date: March 22, 2019
+  url: https://www.libraryjournal.com/?detailStory=alterspace-transforms-libraries-into-rooms-of-requirement
