add - Scout Cambridge article for Alterspace

--- a/app/_data/news.yaml
+++ b/app/_data/news.yaml
@@ -186,3 +186,12 @@
   url: https://www.libraryjournal.com/?detailStory=alterspace-transforms-libraries-into-rooms-of-requirement
   archived_url: https://perma.cc/D6X9-3L9E
   archived_date: July 10, 2019
+
+- project: alterspace
+  type: press
+  title: "From Public to Personalized: Alterspace Turns Libraries Into Rooms of Requirement"
+  publication: Scout Cambridge
+  date: July 19, 2019
+  url: https://scoutcambridge.com/from-public-to-personalized-alterspace-turns-libraries-into-rooms-of-requirement/
+  archived_url: https://perma.cc/DQ93-87F7
+  archived_date: July 19, 2019
