--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -12,13 +12,13 @@
 anastasia-aizman:
   name: Anastasia Aizman
   sort_name: Aizman
-  role: Developer
+  role: Developer & designer
   bio: >
-    Anastasia is a developer and designer, and she just came here to say
+    Anastasia just came here to say
     that she's fairly certain everyone is mispronouncing the word
     "academia".
   email: aaizman@law.harvard.edu
-  website: http://iamanastasia.com
+  website: anastasia.github.io
   twitter_account_name:
   github_account_name: anastasia
   image: anastasia-aizman.png
