--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -18,7 +18,7 @@ anastasia-aizman:
     that she's fairly certain everyone is mispronouncing the word
     "academia".
   email: aaizman@law.harvard.edu
-  website: anastasia.github.io
+  website: https://anastasia.github.io
   twitter_account_name:
   github_account_name: anastasia
   image: anastasia-aizman.png
