replace - b/w is so 1840s

--- a/app/_config.yml
+++ b/app/_config.yml
@@ -19,7 +19,7 @@ description: >
   Bringing the best of technology to the world of libraries and the best of libraries to the world of technology. And vice versa.
 baseurl: ""
 url: "https://lil.law.harvard.edu"
-sharing-image: "thumbs/800x800r/lab-hero-narrow.jpg"
+sharing-image: "thumbs/800x800r/lab-alterspace-hero-narrow.png"
 
 # Contact
 email: lil@law.harvard.edu
