Add github link

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -333,7 +333,7 @@ ben-steinberg:
   email:  bsteinberg@law.harvard.edu
   website:
   twitter_account_name:
-  github_account_name:
+  github_account_name: bensteinberg
   image: ben-steinberg.jpg
   affiliated: true
 
