--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -24,6 +24,19 @@ anastasia-aizman:
   image: anastasia-aizman.png
   affiliated: true
 
+  #brennan-chesley:
+  #name: Brennan Chesley
+  #sort_name: Chesley
+  #role: Developer
+  #bio: >
+  #We're moving to bios that are longer and a little less jokey— look at Ben and Andy's bio for examples.
+          #email: bchesley@law.harvard.edu
+          #website: https://google.com
+          #twitter_account_name:
+          #github_account_name: 
+          #image: brennan-chesley.png
+          #affiliated: true
+
 samantha-bates:
   name: Samantha Bates
   sort_name: Bates
