--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -24,18 +24,21 @@ anastasia-aizman:
   image: anastasia-aizman.png
   affiliated: true
 
-  #brennan-chesley:
-  #name: Brennan Chesley
-  #sort_name: Chesley
-  #role: Developer
-  #bio: >
-  #        We're moving towards bios that are longer and a bit less jokey, like Ben's and Andy's bios
-  #email: bchesley@law.harvard.edu
-  #website: https://google.com
-  #twitter_account_name:
-  #github_account_name: 
-  #image: brennan-chesley.jpg
-  #affiliated: true
+brennan-chesley:
+  name: Brennan Chesley
+  sort_name: Chesley
+  role: Developer
+  bio: >
+    Brennan has lived in 4 states and 2 countries. He's had a wide variety
+    of professional experience, including making coffee, writing programs
+    to help people make coffee, and never-graduating from the Recurse Center
+    in between. He currently works on the h2o project.
+  email: bchesley@law.harvard.edu
+  website: 
+  twitter_account_name:
+  github_account_name: holtchesley
+  image: brennan-chesley.jpg
+  affiliated: true
 
 samantha-bates:
   name: Samantha Bates
