--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -354,7 +354,7 @@ ben-steinberg:
   image: ben-steinberg.jpg
   affiliated: true
 
-tim-walsh:
+tessa-walsh:
   name: Tessa Walsh
   sort_name: Walsh
   role: 2018 Summer Fellow
