Correct bundler cache location.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
     volumes:
         - ./app:/srv/jekyll
         - ./build:/srv/build
+        - ./bundle:/usr/local/bundle:delegated
   server:
     image: httpd:2.4
     ports:
         - "127.0.0.1:8080:8080"
     volumes:
-        - ./bundle:/usr/local/bundle
         - ./build:/usr/local/apache2/htdocs
         - ./apache/httpd.conf:/usr/local/apache2/conf/httpd.conf
         - ./apache/logs:/usr/local/apache2/logs
