--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: "Test"
           command: |
-            bash ~/project/scripts/run_tests.sh
+            bash ./scripts/run-tests.sh
 
       - save_cache:
           key: bundle-{{ checksum "app/Gemfile.lock" }}
