Add charset=utf-8 to Content-Type to fix JSON output

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -504,6 +504,7 @@ LogLevel warn
 
 <VirtualHost *:8080>
     DocumentRoot "/usr/local/apache2/htdocs"
+    AddCharset UTF-8 .js
 </VirtualHost>
 
 
