--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,10 @@ services:
         - ./build:/srv/build
         - ./bundle:/usr/local/bundle:delegated
   server:
-    image: httpd:2.4
+    image: nginx:1.14.2
     ports:
-        - "127.0.0.1:8080:8080"
+        - "127.0.0.1:8080:80"
     volumes:
-        - ./build:/usr/local/apache2/htdocs
-        - ./apache/httpd.conf:/usr/local/apache2/conf/httpd.conf
-        - ./apache/logs:/usr/local/apache2/logs
+        - ./build:/usr/share/nginx/html
+        - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+        - ./nginx/logs:/var/log/nginx
