--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -386,9 +386,7 @@ adam-ziegler:
   sort_name: Ziegler
   role: Director
   bio: >
-    Adam is a lawyer and freethrow champion. He once made an opposing
-    lawyer cry during trial...in a good way. His favorite book is Clovis
-    Crawfish and His Friends.
+    Adam joined LIL in 2014, after representing clients in court as an attorney for 10+ years and then launching a web startup that sought to promote open and collaborative legal knowledge. He's worked for law firms large and small, the U.S. DOJ, a federal appellate judge, the Davidson College Library, and a pizza buffet, among others, and he's taught law school courses on computer programming and the role of technology in legal services. He's immensely proud of LIL's work and grateful to be part of such a creative and kind-hearted team.
   email:  aziegler@law.harvard.edu
   website:
   twitter_account_name: abziegler
