--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -23,6 +23,22 @@ anastasia-aizman:
   github_account_name: anastasia
   image: anastasia-aizman.png
   affiliated: true
+  
+catherine-brobston:
+  name: Catherine Brobston
+  sort_name: Brobston
+  role: Outreach & Support
+  bio: >
+    Catherine has spent most of her career in the education space, 
+    first in development and later as an account manager for education 
+    users at a software start-up. She recently graduated from CUNY-Queens 
+    College with an MLIS and now works primarily on outreach and support for H2O.
+  email: cbrobston@law.harvard.edu
+  website:
+  twitter_account_name:
+  github_account_name:
+  image: catherine-brobston.jpg
+  affiliated: true
 
 brennan-chesley:
   name: Brennan Chesley
