--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -207,7 +207,7 @@ kelly-fitzpatrick:
   sort_name: Fitzpatrick
   role: Research Associate
   bio: >
-    Kelly works on how people share collections online. Since joining LIL in 2018, Kelly has worked on connecting researchers with the Caselaw Access Project and leads project outreach and communications. She also supports work on open casebooks as part of the H2O project. Before joining LIL, Kelly worked on open access at the Berkman Klein Center for Internet for Society. 
+    Kelly connects researchers with the Caselaw Access Project and leads project outreach and communications. She also supports work on open casebooks as part of the H2O project. Before joining LIL, Kelly worked on open access at the Berkman Klein Center for Internet & Society.
   email: lfitzpatrick@cyber.harvard.edu
   website: http://lkfitz.tumblr.com/
   twitter_account_name: fitzbub
