--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -17,7 +17,7 @@ anastasia-aizman:
     Prior to learning to code, Anastasia was an art director and designer at ad agencies, design studios, and
     the New York Public Library. She now works on mixing everything she knows together for large projects like
     Caselaw Access Project and explorations like Alterspace. She likes drawing and mutual aid.
-    She is also fluent in Russian, having immigrating to the U.S. at age ten.
+    She is also fluent in Russian, and immigrated to the U.S. at age ten.
   email: aaizman@law.harvard.edu
   website: https://anastasia.github.io
   twitter_account_name:
