Update Clare Bio

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -338,7 +338,12 @@ clare-stanton:
   sort_name: Stanton
   role: Communications & Outreach
   bio: >
-    Clare is a MLIS student who loves art but always finds herself distracted by poor signage in museums. She used to run a rowdy college radio station and has made a vow to never be a librarian who shushes.
+    Clare’s true occupation is as a milliner, creating multiple hats for herself everywhere she goes. 
+    She’s worked in every department of a photography gallery, as the event coordinator/alumni liaison/substitute teacher
+    at a small independent school, as the database maintainer/research assistant/calendar 
+    keeper for a group of innovation and management researchers, and now as the compost watchdog/vinyl cutter 
+    whisperer/side project logistics manager at LIL. She also is the outreach and communications lead for Perma.cc and 
+    has a MLIS from Simmons University. 
   email: cstanton@law.harvard.edu
   website:
   twitter_account_name: clare__stanton
