Make H2O capitalization consistent

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -49,7 +49,7 @@ brennan-chesley:
     Brennan has lived in 4 states and 2 countries. He's had a wide variety
     of professional experience, including making coffee, writing programs
     to help people make coffee, and never-graduating from the Recurse Center
-    in between. He currently works on the h2o project.
+    in between. He currently works on the H2O project.
   email: bchesley@law.harvard.edu
   website:
   twitter_account_name:
