Add that I do things with perma/make better

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -30,10 +30,10 @@ catherine-brobston:
   sort_name: Brobston
   role: Outreach & Support
   bio: >
-    Catherine has spent most of her career in the education space, 
-    first in development and later as an account manager for education 
-    users at a software start-up. She recently graduated from CUNY-Queens 
-    College with an MLIS and now works primarily on outreach and support for H2O.
+    Catherine has spent most of her career in the education space, first in development and later at a startup 
+    working with education users. In 2020 she graduated with an MLIS from CUNY, spending time during the program 
+    at public libraries and archives while focusing on information access and preservation. She now works primarily 
+    with academic users of H2O and perma.cc, supporting their efforts to more openly share and preserve their work.
   email: cbrobston@law.harvard.edu
   website:
   twitter_account_name:
