--- a/app/_data/news.yaml
+++ b/app/_data/news.yaml
@@ -7,7 +7,7 @@
   title: A Closer Look at the Caselaw Access Project
   publication: AALL Spectrum
   date: May / June 2020
-  url: https://www.aallnet.org/wp-content/uploads/2020/04/SPECTRUM_Caselaw-Access-Project.pdf
+  url: https://aallspectrum.aallnet.org/html5/reader/production/default.aspx?pnum=23&edid=d98eccf1-bdd8-4cb6-8c06-1fd8ed81bec0
   archived_url: https://perma.cc/EAJ9-T93P
   archived_date: July 23, 2020
 
